--- a/src/component/_inputText.scss
+++ b/src/component/_inputText.scss
@@ -26,6 +26,9 @@
             &::placeholder{
                 color: $fc-input-placeholder;
             }
+            &:focus{
+                outline: none;
+            }
         }
     }
     .input-label{
